--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,15 +57,6 @@
   --color-primary-variant: rgba(245, 216, 100, 0.2);
 }
 
-.green {
-  --color-primary: #90caa7;
-  --color-primary-variant: rgba(144, 202, 167, 0.2);
-}
-
-.purple {
-  --color-primary: #c19eec;
-  --color-primary-variant: rgba(193, 158, 236, 0.2);
-}
 
 * {
   margin: 0;
@@ -290,6 +281,7 @@ button {
   display: grid;
   place-items: center;
   height: 5rem;
+  width: 1fr;
   position: fixed;
   top: 0;
   left: 0;
@@ -1320,10 +1312,6 @@ SUGGESTED FRIENDS
 
   .main__container {
     grid-template-columns: 1fr;
-  }
-
-  .navbar__search {
-    display: none;
   }
 
   .sidebar {
